# api/swagger.yaml
@@ -1,100 +1,114 @@
 ---
 swagger: "2.0"
 info:
-  description: This is a simple API
-  version: 1.0.0
-  title: Simple Customer API
+  description: "This is a simple API"
+  version: "1.0.0"
+  title: "Simple Customer API"
   contact:
-    email: mlott@salesforce.com
+    email: "mlott@salesforce.com"
   license:
-    name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-host: fathomless-meadow-53177.herokuapp.com
-basePath: /markslott5/TrivialCustomerAPI/1.0.0
+    name: "Apache 2.0"
+    url: "http://www.apache.org/licenses/LICENSE-2.0.html"
+host: "virtserver.swaggerhub.com"
+basePath: "/markslott5/TrivialCustomerAPI/1.0.0"
 tags:
-- name: admins
-  description: Secured Admin-only calls
-- name: developers
-  description: Operations available to regular developers
+- name: "admins"
+  description: "Secured Admin-only calls"
+- name: "developers"
+  description: "Operations available to regular developers"
 schemes:
-- https
+- "https"
 paths:
   /customers:
     get:
-      operationId: getCustomers
+      operationId: "getCustomers"
       produces:
-      - application/json
+      - "application/json"
       parameters: []
       responses:
         200:
-          description: list of customers
+          description: "list of customers"
           schema: {}
         400:
-          description: something went wrong
+          description: "something went wrong"
+      x-swagger-router-controller: "Default"
   /customer:
     get:
-      operationId: getCustomer
+      operationId: "getCustomer"
       produces:
-      - application/json
+      - "application/json"
       parameters:
-      - name: custId
-        in: query
-        description: customerId
+      - name: "custId"
+        in: "query"
+        description: "customerId"
         required: true
-        type: string
+        type: "string"
       responses:
         200:
-          description: get a customer by id
+          description: "get a customer by id"
           schema:
-            type: object
+            type: "object"
         400:
-          description: something went wrong
+          description: "something went wrong"
+      x-swagger-router-controller: "Default"
     post:
-      summary: adds a customer record
-      description: Adds a customer record
-      operationId: addCustomer
+      summary: "adds a customer record"
+      description: "Adds a customer record"
+      operationId: "addCustomer"
       consumes:
-      - application/json
+      - "application/json"
       produces:
-      - application/json
+      - "application/json"
       parameters:
-      - in: body
-        name: customer
-        description: Customer to add
+      - in: "body"
+        name: "customer"
+        description: "Customer to add"
         required: false
         schema:
-          $ref: '#/definitions/Customer'
+          $ref: "#/definitions/Customer"
       responses:
         201:
-          description: customer added
+          description: "customer added"
         400:
-          description: invalid input, object invalid
+          description: "invalid input, object invalid"
         409:
-          description: an existing item already exists
+          description: "an existing item already exists"
+      x-swagger-router-controller: "Default"
 definitions:
   Customer:
     properties:
       id:
-        type: string
+        type: "string"
       firstName:
-        type: string
+        type: "string"
       lastName:
-        type: string
+        type: "string"
       email:
-        type: string
+        type: "string"
       phone:
-        type: string
+        type: "string"
       street:
-        type: string
+        type: "string"
       city:
-        type: string
+        type: "string"
       state:
-        type: string
+        type: "string"
       country:
-        type: string
+        type: "string"
       postal:
-        type: string
+        type: "string"
+    example:
+      firstName: "firstName"
+      lastName: "lastName"
+      country: "country"
+      phone: "phone"
+      city: "city"
+      street: "street"
+      id: "id"
+      state: "state"
+      postal: "postal"
+      email: "email"
   Customers:
-    type: array
+    type: "array"
     items:
-      $ref: '#/definitions/Customer'
+      $ref: "#/definitions/Customer"
